[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/balls/ball_1.png" type="Texture" id=1]
[ext_resource path="res://ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/balls/shadow.png" type="Texture" id=3]
[ext_resource path="res://Ball/bounce_zone.tres" type="Shape2D" id=4]
[ext_resource path="res://assets/textures/balls/ball_spawn_point.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/balls/ball_spawn_sprite.png" type="Texture" id=6]
[ext_resource path="res://ball/Ball_Hit.tscn" type="PackedScene" id=7]
[ext_resource path="res://ball/Ball_Bounce.tscn" type="PackedScene" id=8]
[ext_resource path="res://shaders/recolour_ball.tres" type="Material" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "disappear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpawnPoint:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpawnGlow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "display"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpawnPoint:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpawnGlow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpawnPoint:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpawnGlow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.3, 2.4, 2.45, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 5, 6, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_inPlay"
} ]
}

[sub_resource type="Animation" id=5]
length = 2.0

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Ball" type="Area2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 9 )
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="SpawnPoint" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -1 )
hframes = 14

[node name="SpawnGlow" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, -7 )
hframes = 7

[node name="BounceZones" type="Node2D" parent="."]

[node name="Top" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Top"]
position = Vector2( 0, -13.5 )
shape = ExtResource( 4 )

[node name="Right" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Right"]
position = Vector2( 6.5, -7 )
rotation = 1.5708
shape = ExtResource( 4 )

[node name="Bottom" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Bottom"]
position = Vector2( 0, -0.5 )
shape = ExtResource( 4 )

[node name="Left" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Left"]
position = Vector2( -6.5, -7 )
rotation = 1.5708
shape = ExtResource( 4 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 2 )
anims/display = SubResource( 3 )
anims/spawn = SubResource( 4 )
anims/spin_left = SubResource( 5 )
anims/spin_right = SubResource( 6 )

[node name="Audio" type="Node" parent="."]

[node name="Ball_Hit" parent="Audio" instance=ExtResource( 7 )]

[node name="Ball_Bounce" parent="Audio" instance=ExtResource( 8 )]

[connection signal="area_entered" from="." to="." method="_on_Ball_area_entered"]
[connection signal="area_entered" from="BounceZones/Top" to="." method="_on_Top_area_entered"]
[connection signal="area_entered" from="BounceZones/Right" to="." method="_on_Right_area_entered"]
[connection signal="area_entered" from="BounceZones/Bottom" to="." method="_on_Bottom_area_entered"]
[connection signal="area_entered" from="BounceZones/Left" to="." method="_on_Left_area_entered"]
